# cor_mdp_ahold

./: .gitignore  .gitmodules  Dockerfile  README.md  albert_melodic.rosinstall  create_demo.sh  docker-compose.yml  docker-entrypoint.sh  index.html  requirements.txt  test.txt
albert_control/scripts/: gripper_control.py
albert_description/meshes/: camera_holder.stl
albert_description/rviz/: albert_navigation.rviz
albert_description/urdf/: extrusion.xacro
albert_gazebo/launch/: albert_gazebo.launch  albert_gazebo_navigation.launch  (+1 more)
customer_detection/: CMakeLists.txt  README.md  package.xml
demo/: CMakeLists.txt  README.md  package.xml
human_detection/: package.xml
krr_example_actions/: README.md
lidar_cluster/: CMakeLists.txt  README.md  package.xml
moveit_python_interface/: CMakeLists.txt  package.xml
order_package/: CMakeLists.txt  README.md  package.xml
order_package/config/: store_locations.yaml  waypoints.yaml  waypoints_sim.yaml
order_package/data/: products sim.csv  products.csv  products_sim.csv
order_package/launch/: launch_store.launch  order_handler.launch
order_package/msg/: OrderGoal.msg  OrderRequest.msg
order_package/scripts/: customer_interface.py  example_order_client.py  order.py  order_client.py  order_node.py  product_param_loader.py  request_to_goal.py
order_package/src/: database.ods  order_handler.py
order_package/srv/: AddTask.srv
retail_store_skills/: CMakeLists.txt  README.md
voice_requests/: CMakeLists.txt  README.md  package.xml
voice_requests/action/: CustomerInteraction.action
voice_requests/config/: chatgpt_primer.txt
voice_requests/launch/: voice_requests.launch
voice_requests/scripts/: chatgpt_primer.txt  chatgpt_response.py  customer_interaction_client.py  customer_interaction_server.py  request_detector.py  voice_request.py  voice_tools.py
(+64 files in other folders)
